force-app/main/default/objects/Elaro_API_Config__mdt/Elaro_API_Config__mdt.object-meta.xml
<CustomObject>
    <description>Stores API configuration for Elaro external integrations including API keys and HMAC secrets.</description>
    <label>Elaro API Config</label>
    <pluralLabel>Elaro API Configs</pluralLabel>
</CustomObject>