force-app/main/default/objects/Elaro_API_Config__mdt/fields/API_Key_Hash__c.field-meta.xml
<CustomField>
    <fullName>API_Key_Hash__c</fullName>
    <description>SHA256 hash of the API key. Never store plaintext API keys. Use ElaroScoreCallback.generateHashForKey() to generate the hash.</description>
    <label>API Key Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>