force-app/main/default/objects/Elaro_API_Config__mdt/fields/HMAC_Secret__c.field-meta.xml
<CustomField>
    <fullName>HMAC_Secret__c</fullName>
    <description>HMAC secret for signature validation of inbound requests</description>
    <label>HMAC Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>